Fix cropping

--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,6 @@ ul .header {
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
     margin: 0px 0px;
     padding: 0px 0px;
     width: 100%;
@@ -90,7 +87,7 @@ img:hover~#backrooms-attribution {
     bottom: 0;
     float: right;
     width: 100%;
-    padding: 0px 10px;
+    padding: 10px;
     background-color: #8B0000;
 }
 
